# template-aiogram

./: .env.example  .gitignore  Dockerfile.bot  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
src/: database.py  main.py
src/config/: __init__.py  base.py  config.py  menu.py
src/log/: __init__.py  base.py  logs.py  utils.py
src/middlewares/: __init__.py  database_md.py
src/models/: user.py
src/repositories/: __init__.py  abstract.py  user.py
src/routers/: __init__.py
src/routers/common/: cancel.py  start.py
src/scenes/: __init__.py  common.py
src/structures/: role.py
